Fix main section on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -100,6 +100,9 @@ section {
   header ul {
     position: static; /* fix TOC on mobile */
   }
+  section {
+    width: auto;
+  }
 }
 
 img + em {
